--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
+  audioplayers: ^1.1.1
   cupertino_icons: ^1.0.2
   dio: ^5.4.3+1
   flutter:
